--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,9 @@
   height: 100%;
   width: 80%;
   margin: 0 auto;
-  background: #a6b7ce;
+  background-color: white;
   /*background-color: rgba(166, 183, 206, 0);*/
-  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 1);
   min-height: 100vh;
 }
 
