--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
   margin: 0 auto;
   background-color: white;
   /*background-color: rgba(166, 183, 206, 0);*/
-  box-shadow: 0px 4px 30px rgba(0, 0, 0, 1);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, .5);
   min-height: 100vh;
 }
 
@@ -49,6 +49,7 @@
 .formContainer {
   padding-left: 5%;
   padding-right: 5%;
+  padding-top: 2%;
   width: 50%;
   display: block;
   margin-left: auto;
@@ -84,7 +85,10 @@
 }
 
 .footerContainer {
-  background-color: gray;
+  background-color: #343a40;
+  color: white;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1.25rem;
   position: absolute;
   bottom: 0px;
   padding: 1%;
