--- a/src/App.css
+++ b/src/App.css
@@ -2,48 +2,15 @@
   z-index: -2;
 }
 
-.img {
-  max-width:100%;
-  max-height:100%;
-}
-
-.backGroundImage {
+body {
   z-index: -1;
-  background-repeat: no-repeat;
+  background-image: url("./weatherBackGroundMinimal.jpg");
+  background-repeat: repeat-y;
   background-position: center;
   background-size: stretch;
   height: 100%;
   width: 100%;
   position: absolute;
-  min-height: calc(100vh - 50px);
-}
-
-.contentContainer {
-  position: relative;
-  text-align: center;
-  height: 100%;
-  width: 80%;
-  margin: 0 auto;
-  background-color: white;
-  /*background-color: rgba(166, 183, 206, 0);*/
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, .5);
-  min-height: 100vh;
-}
-
-.headerTitle {
-  font-family: "Palanquin Dark", Courier, monospace;
-  font-size: 500%;
-  padding-bottom: 1%;
-}
-
-.cardDeckContainer {
-  padding: 2%;
-  height: 100%;
-  /*min-height: calc(100vh - 50px);*/
-}
-
-.bsCardDeck {
-  padding: 1%;
 }
 
 .formContainer {
@@ -66,6 +33,41 @@
   font-size: x-small;
 }
 
+.contentContainer {
+  position: relative;
+  text-align: center;
+  height: 100%;
+  width: 80%;
+  margin: 0 auto;
+  background-color: white;
+  /*background-color: rgba(166, 183, 206, 0);*/
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, .5);
+}
+
+.cardDeckContainer {
+  padding: 2%;
+  height: 100%;
+  /*min-height: calc(100vh - 50px);*/
+}
+
+.cardDeck {
+  justify-content: center;
+}
+
+.weatherCards {
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
+  padding: 1%;
+  margin: 1%;
+  transition: transform 0.3s;
+  width: 18rem;
+  max-width: 30em;
+  min-width: 18rem;
+}
+.weatherCards:hover {
+  z-index: 5;
+  transform: scale(1.05);
+}
+
 .bsCardImage {
   width: 100px;
   height: 100px;
@@ -74,23 +76,15 @@
   margin-right: auto;
 }
 
-.weatherCards {
-  width: "18rem";
-  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
-  transition: transform 0.2s;
-}
-.weatherCards:hover {
-  z-index: 5;
-  transform: scale(1.1);
-}
-
+/*
+  Footer
+*/
 .footerContainer {
   background-color: #343a40;
   color: white;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 1.25rem;
   position: absolute;
-  bottom: 0px;
   padding: 1%;
   width: 100%;
 }
