--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,26 @@ body {
   position: absolute;
 }
 
+.contentContainer {
+  position: relative;
+  text-align: center;
+  height: 100%;
+  width: 80%;
+  margin: 0 auto;
+  background-color: white;
+  /*background-color: rgba(166, 183, 206, 0);*/
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+}
+
+.navBar {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .formContainer {
   padding-left: 5%;
   padding-right: 5%;
-  padding-top: 2%;
+  padding-top: 5%;
   width: 50%;
   display: block;
   margin-left: auto;
@@ -33,17 +49,6 @@ body {
   font-size: x-small;
 }
 
-.contentContainer {
-  position: relative;
-  text-align: center;
-  height: 100%;
-  width: 80%;
-  margin: 0 auto;
-  background-color: white;
-  /*background-color: rgba(166, 183, 206, 0);*/
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, .5);
-}
-
 .cardDeckContainer {
   padding: 2%;
   height: 100%;
@@ -57,12 +62,13 @@ body {
 .weatherCards {
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
   padding: 1%;
-  margin: 1%;
+  margin: 1% auto;
   transition: transform 0.3s;
   width: 18rem;
   max-width: 30em;
   min-width: 18rem;
 }
+
 .weatherCards:hover {
   z-index: 5;
   transform: scale(1.05);
@@ -82,7 +88,9 @@ body {
 .footerContainer {
   background-color: #343a40;
   color: white;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.25rem;
   position: absolute;
   padding: 1%;
