--- a/src/App.css
+++ b/src/App.css
@@ -108,10 +108,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1.25rem;
+  font-size: 1rem;
   position: absolute;
   padding: 1%;
   width: 100%;
+  text-align: left !important;
 }
 
 .footer {
