--- a/src/App.css
+++ b/src/App.css
@@ -17,14 +17,16 @@ body {
 }
 
 .contentContainer {
-  position: relative;
+  position: absolute;
   text-align: center;
-  height: 100%;
   width: 80%;
   margin: 0 auto;
   background-color: white;
   /*background-color: rgba(166, 183, 206, 0);*/
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+  left: calc(50% - 40%);
+
+  min-height: 100% !important;
 }
 
 /*
@@ -71,6 +73,7 @@ body {
 .cardDeckContainer {
   padding: 2%;
   height: 100%;
+  min-height: 100vh;
 }
 
 .cardDeck {
@@ -113,8 +116,21 @@ body {
   padding: 1%;
   width: 100%;
   text-align: left !important;
+  bottom: 0 !important;
 }
 
-.footer {
-  padding: 1%;
+.footer,
+.push {
+  position: absolute;
+}
+
+.errorContainer {
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 3%;
+  width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30%;
 }
